Fix contrast text and background green stylesheet

--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ html {
 }
 
 .green {
-  color: #36b37e;
+  color: #1A875A;
 }
 
 .greenBG {
-  background-color: #36b37e;
+  background-color: #1A875A;
 }
 
 .dgreen {
@@ -231,7 +231,7 @@ h4 {
   content: "";
   width: 48px;
   height: 4px;
-  background-color: #36b37e;
+  background-color: #1A875A;
   border-radius: 24px;
   position: absolute;
   bottom: -20px;
@@ -398,7 +398,7 @@ h4 {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #36b37e;
+  color: #1A875A;
   border-radius: 10%;
   padding: 4% 3%;
   background-color: white;
